alignment fix on homepag

--- a/servers/website/public/less/landing/hero.less
+++ b/servers/website/public/less/landing/hero.less
@@ -59,6 +59,7 @@
       
     .fixed-side-nav { 
       position: relative;
+      top: 5px;
       
       a {
         background: white;
